--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
 
 	<!-- Hlavička -->
+	<section class="header">
 		<img src="images/logo.svg" alt="logo Skvělá cukrárna">
 
 		<ul>
@@ -23,80 +24,113 @@
 			<li><a href="#">Kontakt</a></li>
 			<li><a href="#">Online objednávka</a></li>
 		</ul>
-
+	</section>
 
 
 
 	<!-- Hero sekce s obrázkem a hlavním nadpisem -->
+	<section class="hero">
 		<h1>Sladké potěšení z&nbsp;kvalitních surovin</h1>
 
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
 		</p>
-
+	</section>
 
 
 
 	<!-- sekce Vítejte v naší cukrárně -->
+	<section class="welcome">
 		<!-- levý sloupec -->
+		<div class="left">
 			<h2>Vítejte v naší cukrárně</h2>
 
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus officia minima reiciendis beatae, quo consequatur blanditiis molestiae laborum, at porro ipsum soluta temporibus.</p>
 
 			<a href="#">Naše výrobky</a>
+		</div>
 
 		<!-- pravý sloupec -->
+		<div class="right">
 			<img src="images/cukrarka.jpg" alt="cukrářka">
-
+		</div>
+	</section>
 
 
 
 	<!-- sekce Dnešní nabídka -->
+	<section class="offer">
 		<h2>Dnešní nabídka</h2>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+		<div class="product_portfolio">
+			<!-- produkt 1 -->
+			<div class="product_cards">
+				<img class="product" src="images/dort.jpg" alt="Šlehačkový dort s malinami">
+				<div class="descripton">
+					<h3>Malinový dort</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+				</div>
+			</div>
 
-		<!-- produkt 1 -->
-			<img src="images/dort.jpg" alt="Šlehačkový dort s malinami">
-			<h3>Malinový dort</h3>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+			<!-- produkt 2 -->
+			<div class="product_cards">
+				<img class="product" src="images/livance.jpg" alt="Lívance s ovocem">
+				<div class="descripton">
+					<h3>Lívance s ovocem</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+				</div>	
+			</div>
 
-		<!-- produkt 2 -->
-			<img src="images/livance.jpg" alt="Lívance s ovocem">
-			<h3>Lívance s ovocem</h3>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+			<!-- produkt 3 -->
+			<div class="product_cards">
+				<img class="product" src="images/kolac.jpg" alt="Dýňový koláč">
+				<div class="descripton">
+					<h3>Dýňový koláč</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+				</div>	
+			</div>
 
-		<!-- produkt 3 -->
-			<img src="images/kolac.jpg" alt="Dýňový koláč">
-			<h3>Dýňový koláč</h3>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+			<!-- produkt 4 -->
+			<div class="product_cards">
+				<img class="product" src="images/buchticka.jpg" alt="Buchtička s polevou">
+				<div class="descripton">
+					<h3>Buchtička s polevou</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+				</div>
+			</div>
 
-		<!-- produkt 4 -->
-			<img src="images/buchticka.jpg" alt="Buchtička s polevou">
-			<h3>Buchtička s polevou</h3>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+		</div>
 
+	</section>
 
 
 
 
 	<!-- sekce Náš přístup k pečení -->
+	<section class="approach">
 		<!-- levý sloupec -->
+		<div class="left">
 			<img src="images/peceni.jpg" alt="pečení">
+		</div>
 
 		<!-- pravý sloupec -->
+		<div class="right">
 			<h2>Náš přístup k pečení</h2>
 
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste dolorem possimus facilis quae minima autem eius consequuntur quia magnam assumenda, repudiandae commodi deleniti alias, ipsum, quisquam aliquid iusto tenetur suscipit.</p>
 
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus officia minima reiciendis beatae, quo consequatur blanditiis molestiae laborum, at porro ipsum soluta temporibus.</p>
+		</div>
 
+	</section>
 
 
 
 	<!-- Patička -->
+	<section class="footer">
 		<p>©2020, Czechitas. Vytvořeno pro kurz Staň se kóderkou.</p>
-
+	</section>
 
 
 </body>
