section header + section_inner side padding

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 	<!-- Hlavička -->
 	<section class="header">
 		<div class="section_inner">
-			<img src="images/logo.svg" alt="logo Skvělá cukrárna">
+			<img class="logo" src="images/logo.svg" alt="logo Skvělá cukrárna">
 
-			<ul>
+			<ul class="navigation">
 				<li><a href="#">Nabídka dortů</a></li>
 				<li><a href="#">Blog</a></li>
 				<li><a href="#">O nás</a></li>
