--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<!-- Hlavička -->
 	<section class="header">
-		<div class="section_inner">
+		<div class="section_inner flex_col">
 			<img class="logo" src="images/logo.svg" alt="logo Skvělá cukrárna">
 
 			<ul class="navigation">
@@ -45,7 +45,7 @@
 
 	<!-- sekce Vítejte v naší cukrárně -->
 	<section class="welcome">
-		<div class="section_inner">
+		<div class="section_inner flex_col">
 			<!-- levý sloupec -->
 			<div class="left">
 				<h2>Vítejte v naší cukrárně</h2>
@@ -53,12 +53,12 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus officia minima reiciendis beatae, quo consequatur blanditiis molestiae laborum, at porro ipsum soluta temporibus.</p>
 
-				<a href="#">Naše výrobky</a>
+				<a class="button" href="#">Naše výrobky</a>
 			</div>
 
 			<!-- pravý sloupec -->
 			<div class="right">
-				<img src="images/cukrarka.jpg" alt="cukrářka">
+				<img class="person" src="images/cukrarka.jpg" alt="cukrářka">
 			</div>
 		</div>
 	</section>
@@ -70,7 +70,7 @@
 		<div class="section_inner">
 			<h2>Dnešní nabídka</h2>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-			<div class="product_portfolio">
+			<div class="product_portfolio flex_col">
 				<!-- produkt 1 -->
 				<div class="product_cards">
 					<img class="product" src="images/dort.jpg" alt="Šlehačkový dort s malinami">
@@ -116,7 +116,7 @@
 
 	<!-- sekce Náš přístup k pečení -->
 	<section class="approach">
-		<div class="section_inner">
+		<div class="section_inner flex_col">
 			<!-- levý sloupec -->
 			<div class="left">
 				<img src="images/peceni.jpg" alt="pečení">
