--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<!-- produkt 1 -->
 				<div class="product_cards">
 					<img class="product" src="images/dort.jpg" alt="Šlehačkový dort s malinami">
-					<div class="descripton">
+					<div class="description">
 						<h3>Malinový dort</h3>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 					</div>
@@ -83,7 +83,7 @@
 				<!-- produkt 2 -->
 				<div class="product_cards">
 					<img class="product" src="images/livance.jpg" alt="Lívance s ovocem">
-					<div class="descripton">
+					<div class="description">
 						<h3>Lívance s ovocem</h3>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 					</div>	
@@ -92,7 +92,7 @@
 				<!-- produkt 3 -->
 				<div class="product_cards">
 					<img class="product" src="images/kolac.jpg" alt="Dýňový koláč">
-					<div class="descripton">
+					<div class="description">
 						<h3>Dýňový koláč</h3>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 					</div>	
@@ -101,7 +101,7 @@
 				<!-- produkt 4 -->
 				<div class="product_cards">
 					<img class="product" src="images/buchticka.jpg" alt="Buchtička s polevou">
-					<div class="descripton">
+					<div class="description">
 						<h3>Buchtička s polevou</h3>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 					</div>
