--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<!-- Hlavička -->
 	<section class="header">
-		<div class="section_inner flex_col">
+		<div class="section_inner flex_col low">
 			<img class="logo" src="images/logo.svg" alt="logo Skvělá cukrárna">
 
 			<ul class="navigation">
@@ -32,7 +32,7 @@
 
 	<!-- Hero sekce s obrázkem a hlavním nadpisem -->
 	<section class="hero">
-		<div class="section_inner">
+		<div class="section_inner high">
 			<h1>Sladké potěšení z&nbsp;kvalitních surovin</h1>
 
 			<p>
@@ -45,7 +45,7 @@
 
 	<!-- sekce Vítejte v naší cukrárně -->
 	<section class="welcome">
-		<div class="section_inner flex_col">
+		<div class="section_inner flex_col high">
 			<!-- levý sloupec -->
 			<div class="left">
 				<h2>Vítejte v naší cukrárně</h2>
@@ -58,7 +58,7 @@
 
 			<!-- pravý sloupec -->
 			<div class="right">
-				<img class="person" src="images/cukrarka.jpg" alt="cukrářka">
+				<img class="border_radius" src="images/cukrarka.jpg" alt="cukrářka">
 			</div>
 		</div>
 	</section>
@@ -67,7 +67,7 @@
 
 	<!-- sekce Dnešní nabídka -->
 	<section class="offer">
-		<div class="section_inner">
+		<div class="section_inner high">
 			<h2>Dnešní nabídka</h2>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 			<div class="product_portfolio flex_col">
@@ -116,10 +116,10 @@
 
 	<!-- sekce Náš přístup k pečení -->
 	<section class="approach">
-		<div class="section_inner flex_col">
+		<div class="section_inner flex_col high">
 			<!-- levý sloupec -->
 			<div class="left">
-				<img src="images/peceni.jpg" alt="pečení">
+				<img class="border_radius" src="images/peceni.jpg" alt="pečení">
 			</div>
 
 			<!-- pravý sloupec -->
@@ -136,7 +136,7 @@
 
 
 	<!-- Patička -->
-	<section class="footer">
+	<section class="footer low">
 		<div class="section_inner">
 			<p>©2020, Czechitas. Vytvořeno pro kurz Staň se kóderkou.</p>
 		</div>
